# react-native-pure-storage

react-native-pure-storage/: .gitignore  .npmignore  CHANGELOG.md  LICENSE  README.md  benchmark.js  binary-example.js  binary-test.js  cache.js  errors.js  example.js  file-example.js  file-storage.js  index.d.ts  index.js  jsi-storage.js  jsi-test.js  package.json  react-native-pure-storage.podspec  storage-instance.js
react-native-pure-storage/android/: build.gradle
react-native-pure-storage/android/src/main/: AndroidManifest.xml
react-native-pure-storage/android/src/main/cpp/: CMakeLists.txt  JSIPureStorage.cpp
react-native-pure-storage/android/src/main/java/com/purestorage/: JSIPureStorageModule.java  RNJSIPureStorageModule.java  RNPureStorageModule.java  RNPureStoragePackage.java
react-native-pure-storage/example/: App.js  README.md  package.json
react-native-pure-storage/ios/: JSIPureStorage.mm  RNPureStorage.h  RNPureStorage.m
react-native-pure-storage/scripts/: create-package.sh  publish.sh
